feat: better way to serve files
